# djmix-dataset

./: .gitignore  README.md  pyproject.toml
djmix/: __init__.py  audio.py  bootstrap.py  config.py  download.py  utils.py
djmix/alignment/: __init__.py  dtw.py  helpers.py  transitions.py  tsm.py
djmix/cvxopt/: optimize.py
djmix/cvxopt/optimizers/: __init__.py  eq3_fader_optimizer.py  eq3_optimizer.py  fader_optimizer.py  optimizer.py
djmix/eq/: __init__.py  biquad_filters.py  eq3.py  reconstruct.py
djmix/features/: __init__.py  beats.py  cache.py  spectrograms.py
djmix/models/: Audio.py  Mix.py  Track.py  __init__.py  download.py
notes/: dafx22.ipynb  tutorial.ipynb
scripts/: download.py
