[tool.poetry]
name = "djmix"
version = "0.1.7"
description = ""
authors = ["Taejun Kim <taejun@kaist.ac.kr>"]
include = [
    "dataset/djmix-dataset.json"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
yt-dlp = "*"
librosa = "^0.9.2"
madmom = "^0.16.1"
joblib = "^1.1.0"
scikit-image = "^0.19.3"
pandas = "^1.4.3"
pytsmod = "^0.3.5"
pydantic = "^1.9.2"
pydub = "^0.25.1"
cvxpy = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
